fixed spelling errors. need to change font-awesome and form contrast

--- a/css/index.css
+++ b/css/index.css
@@ -238,6 +238,10 @@ footer p {
     padding: 6%;
 }
 
+.social . a {
+    color:whitesmoke;
+}
+
 /****** Media Queries */
 
 @media (max-width: 800px) {
